@@ -19,6 +19,7 @@
 		when dynamic scaling is used
 	fixed a bug that caused the response timeout to be handled improperly
 	added response timeout command to sqlrsh
+	added support for fetching blobs and input bind blobs with firebird
 
 0.54 - fixed bugs that caused problems when unopened result sets were closed
 	added protocol identification phase to client/server protocol
